--- a/GuliFit/assets/style/a_propos_versionPC.css
+++ b/GuliFit/assets/style/a_propos_versionPC.css
@@ -112,6 +112,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+            padding: 1rem;
         }
 
         footer p {
@@ -148,17 +149,18 @@
             margin: 2px;
         }
 
-        .picto{
-            padding: 1rem;
-        }
-
         .coordonnees{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             color: white;
+            padding: 1rem;
+            font-size: 1.2rem;
+            font-weight: 650;
         }
 
         .logo_footer{
             color: white;
-            font-size: 1rem;
         }
 
         .logo_footer p{
