--- a/GuliFit/assets/style/a_propos_versionPC.css
+++ b/GuliFit/assets/style/a_propos_versionPC.css
@@ -60,13 +60,73 @@
             display: none;
         }
 
+/* ----------------------------SECTION PAGE_HEADER------------------------------- */
+
+        .page_header{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: url(../image/contact/contact.jpg); /* image à changer */
+            width: 100%;
+            height: 20vh;
+        }
+
+        .page_header h1{
+            font-size: 4.5rem;
+            color: white;
+        }
 /* ----------------------------SECTION PART1------------------------------- */
 
+        .part1{
+            padding: 5rem;
+        }
 
+        .part1-1, .part1-2, .part1-3{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .part1-1 img, .part1-2 img, .part1-3 img{
+            width: 50%;
+            margin: 5rem;
+        }
+
+        .part1 img.guli{
+            border-radius: 1rem;
+        }
+
+        .part1-2{
+            flex-direction: row-reverse;
+        }
+
+        .part1-1 h2, .part1-2 h2, .part1-3 h2{
+            margin-bottom: 2rem;
+        }
 
 /* ----------------------------SECTION PART2------------------------------- */
 
+        .part2{
+            flex-direction: row;
+        }
+
+        .part2 img{
+            height: 25rem;
+        }
+
 /* ----------------------------SECTION PART3------------------------------- */
+
+#letsgo:hover {
+    background-color: white;
+}
+#letsgo:hover a {
+    color: #44B491;
+}
+
+.part3 h1{
+    color: #44B491;
+}
+
 
 /* ----------------------------SECTION PUBLICITÉ------------------------------- */
 
