--- a/GuliFit/assets/style/accueil_versionMobile.css
+++ b/GuliFit/assets/style/accueil_versionMobile.css
@@ -178,6 +178,12 @@ main{
     gap: 1.5rem;
 }
 
+.description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .description h1 {
     order: 1;
     color: #44B491;
@@ -197,14 +203,33 @@ main{
     display: none;
 }
 
-.a_propos p {
+.gulifit-button{
     order: 4;
+    background-color: #44B491;
+    border: 0.7vh solid #44B491;
+    width: 80%;
+    padding: 1.5rem;
+    border-radius: 1vh;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.gulifit-button a{
+    color: white;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.a_propos p {
+    order: 3;
     font-family: 'inter';
     font-size: 1.5rem;
     padding: 1rem 4rem;
-}
-.gulifit-button{
-    display: none;
 }
 
 /* ------------------SECTION SEANCES & RECETTES------------------------------- */
