--- a/GuliFit/assets/style/a_propos_versionPC.css
+++ b/GuliFit/assets/style/a_propos_versionPC.css
@@ -4,7 +4,7 @@
         body{
             margin-top: 0;
         }
-    
+
         #head {
             background-color: #000000;
             display: flex;
@@ -74,6 +74,7 @@
         .page_header h1{
             font-size: 4.5rem;
             color: white;
+            font-family: 'Bebas Neue';
         }
 /* ----------------------------SECTION PART1------------------------------- */
 
@@ -101,32 +102,68 @@
         }
 
         .part1-1 h2, .part1-2 h2, .part1-3 h2{
-            margin-bottom: 2rem;
+            margin-bottom: 1.8rem;
         }
 
-/* ----------------------------SECTION PART2------------------------------- */
+        .part1 h2{
+            font-size: 2.5rem;
+        }
 
+        .part1 p{
+            font-size: 1.3rem;
+            line-height: 1.5;
+        }
+        
+/* ----------------------------SECTION PART2------------------------------- */
+        
         .part2{
             flex-direction: row;
         }
-
+        
         .part2 img{
             height: 25rem;
+        }
+        
+        .part2 h2{
+            margin-bottom: 2rem;
+            font-size: 2rem;
+        }
+
+        .part2 p{
+            font-size: 1.5rem;
+            line-height: 1.4;
         }
 
 /* ----------------------------SECTION PART3------------------------------- */
 
-#letsgo:hover {
-    background-color: white;
-}
-#letsgo:hover a {
-    color: #44B491;
-}
+        #letsgo:hover {
+            background-color: white;
+        }
+        #letsgo:hover a {
+            color: #44B491;
+        }
 
-.part3 h1{
-    color: #44B491;
-}
+        .part3 h1{
+            color: #44B491;
+            font-size: 3.5rem;
+        }
 
+        .part3 h3{
+            font-size: 1.8rem;
+        }
+
+        .part3 p{
+            font-size: 1.5rem;
+            line-height: 1.5;
+        }
+
+        .puce_ok_bleu{
+            width: 3rem;
+        }
+
+        #letsgo {
+            width: 35rem;
+        }
 
 /* ----------------------------SECTION PUBLICITÉ------------------------------- */
 
