--- a/GuliFit/assets/style/contact_versionMobile.css
+++ b/GuliFit/assets/style/contact_versionMobile.css
@@ -76,70 +76,109 @@
     display: none;
 }
 
-.contact-form {
-    width: 100%;
-    max-width: 500px;
-    padding: 20px;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+/* ----------------------------MISE EN PAGE DU FORMULAIRE------------------------------- */
+
+.mise_en_page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f2f2f2;
 }
 
-.contact-form h1 {
-    font-size: 24px;
-    color: #333;
+/* ----------------------------SECTION TITRE DU FORMULAIRE------------------------------- */
+
+.intro{
     text-align: center;
-    margin-bottom: 20px;
+    padding: 5rem 2.5rem;
+}
+
+.intro h1{
+    font-family: 'Bebas Neue';
+    font-size: 2rem;
+    color: #0E447E;
+}
+
+.intro p{
+    font-family: 'inter';
+    font-size: 1rem;
+    padding-top: 1rem;
+    color: #0E447E;
+}
+
+/* ----------------------------SECTION CONTENU DU FORMULAIRE------------------------------- */
+
+.contact-form {
+    width: 100%;
+    max-width: 20rem;
+    background: #f2f2f2;
+    padding-bottom: 5rem;
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
 }
 
 .form-group label {
     display: block;
-    font-size: 14px;
-    color: #555;
-    margin-bottom: 5px;
+    font-size: 1.3rem;
+    color: #0E447E;
+    margin-bottom: 0.6rem;
+    font-family: 'Poppins';
+    font-weight:550;
 }
 
 .form-group input,
 .form-group select {
     width: 100%;
-    padding: 10px;
-    font-size: 14px;
-    color: #555;
-    background: #f2f2f2;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    outline: none;
+    padding: 0.7rem;
+    font-size: 1rem;
+    color: black;
+    background: white;
+    border: 0.1rem solid black;
+    border-radius: 0.4rem;
     transition: border-color 0.3s;
 }
 
-.form-group input::placeholder,
-.form-group select option {
-    color: #aaa;
+.form-group input::placeholder{
+    color: grey;
+    font-family: 'inter';
+    font-style: italic;
 }
 
 .form-group input:focus,
 .form-group select:focus {
-    border-color: #44B491;
+    border: 0.1rem solid black;
+}
+
+.form-group select option{
+    color: #0E447E;
+    font-weight: 550;
+    font-family: 'inter';
+}
+
+.form-group select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("../image/pictrogramme/fleche_select.svg");
+    background-repeat: no-repeat;
+    background-position: right 1rem center;
+    background-size: 1.1rem;
+    padding-right: 3rem;
 }
 
 button {
     width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    color: #fff;
+    margin-top: 1.5rem;
+    padding: 0.5rem;
+    font-family: 'Poppins';
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: white;
     background: #44B491;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    border: 0.2rem solid #44B491 ;
+    border-radius: 0.4rem;
     transition: background 0.3s;
-}
-
-button:hover {
-    background: #369e7a;
 }
 
 /* ----------------------------SECTION PUBLICITÉ------------------------------- */
