--- a/GuliFit/assets/style/mes_seances_coach_versionPC.css
+++ b/GuliFit/assets/style/mes_seances_coach_versionPC.css
@@ -146,21 +146,54 @@
 
 /* ----------------------------MISE EN PAGE CENTRALE------------------------------- */
 
-.modify-button {
-    width: 30%;
-}
+        .info-section .form-group {
+            flex-direction: row;
+            align-items: center;
+        }
 
-.modify-button:hover {
-    background-color: #36906d;
-}
+        .info-section label {
+            width: 15%;
+            text-align: right;
+            margin-bottom: 0;
+            margin-right: 1rem;
+        }
 
-.delete-button {
-    width: 30%;
-}
+        .info-section input,
+        .info-section select {
+            width: 70%;
+        }
 
-.delete-button:hover {
-    background-color: rgb(151, 2, 2);
-}
+
+        .illustration-section p {
+            width: 17%;
+            text-align: right;
+            margin-right: 1rem;
+        }
+
+        .illustration{
+            width: 15rem;
+            height: 15rem;
+        }
+
+        .buttons{
+            margin-left: 15%;
+        }
+
+        .modify-button {
+            width: 30%;
+        }
+
+        .modify-button:hover {
+            background-color: #36906d;
+        }
+
+        .delete-button {
+            width: 30%;
+        }
+
+        .delete-button:hover {
+            background-color: rgb(151, 2, 2);
+        }
 
 /* ----------------------------FOOTER STYLE------------------------------- */
 
