--- a/GuliFit/assets/style/accueil_versionPC.css
+++ b/GuliFit/assets/style/accueil_versionPC.css
@@ -91,7 +91,7 @@
     }
     
     #CTA-go a {
-        font-family: "Montserrat", sans-serif;
+        font-family: "Montserrat";
         color: white;
         font-size: 3.2vh;
         font-weight: 700;
