--- a/GuliFit/assets/style/accueil_versionPC.css
+++ b/GuliFit/assets/style/accueil_versionPC.css
@@ -439,7 +439,12 @@
             text-decoration: none;
             color: white;
         }
-
+        
+        .navbar_foot li a:hover, .navbar2_foot li a:hover{
+            text-decoration: none;
+            color: #0E447E;
+        }
+        
         .picto img{
             width: 4rem;
             margin: 2px;
